# backend/internal/app/routes.go
@@ -8,11 +8,13 @@ func SetupRoutes(app *Application) *chi.Mux {
 
 	r := chi.NewRouter()
 
-	r.Get("/api/users/{id}", app.UserHandler.GetCurrentUser)
+	r.Post("/api/users/register", app.UserHandler.RegisterUser)
+	r.Post("/api/users/login", app.UserHandler.LoginUser)
+	r.Get("/api/users/{id}", app.UserHandler.GetUserById)
 	r.Group(func(r chi.Router) {
 		r.Use(app.Middleware.Authenticate)
 
-		r.Patch("/api/users/{id}", app.Middleware.RequireUser(app.UserHandler.UpdateCurrentUser))
+		r.Patch("/api/users/{id}", app.Middleware.RequireUser(app.UserHandler.UpdateUserById))
 	})
 
 	// mux.HandleFunc("GET /api/users/me", userH.GetCurrentUser)
